--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
             <meta http-equiv="X-UA-Compatible" content="IE=edge">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-                <title> Cat Memes </title>
+                <title> Makeup Brands </title>
 
                     <link rel="stylesheet" href="/css/style.css">
                     <link rel="stylesheet" href="/css/style.scss">
@@ -21,14 +21,14 @@
             <h1>Makeup Brands</h1>
                 <form action="#" method="GET" class="js-form">
                     <select name="makeup-brand" class="js-makeup-brand">
-                        <option value="stila">stila</option>
-                        <option value="almay">almay</option>
-                        <option value="maybelline">maybelline</option>
-                        <option value="304">304</option>
+                         <option value="stila">stila</option>
+                         <option value="almay">almay</option>
+                         <option value="maybelline">maybelline</option>
+                         <option value="covergirl">covergirl</option>
                     </select>
-                    <button type="submit">Show Images</button>
+                            <button type="submit">Show Images</button>
                 </form>
-                
+                        
                     <div id="image"></div>
                         <script src="/js/makeup.js"></script>
 
